feat: Implement database backup and restore functionality
- Added BackupController to handle backup requests and responses.
- Created BackupService for managing backup operations including creating, listing, restoring, and generating download URLs for backups.
- Integrated Google Cloud Storage for storing backups.
- Implemented scheduled monthly backups using cron jobs.
- Added DTOs for backup information and responses.
- Created Redis module for caching functionality.
- Developed PDF generation service for creating various document types.
- Established Redis service for managing cache operations.

--- a/package.json
+++ b/package.json
@@ -28,16 +28,22 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.6.0",
     "crypto-js": "^4.2.0",
+    "ioredis": "^5.6.0",
+    "jspdf": "^3.0.1",
+    "jszip": "^3.10.1",
     "nodemailer": "^6.10.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "response-time": "^2.3.3",
     "rxjs": "^7.8.1",
     "xlsx": "^0.18.5"
   },
@@ -52,12 +58,15 @@
     "@types/bcrypt": "^5.0.2",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/response-time": "^2.3.8",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
