--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.6.0",
+    "cookie-parser": "^1.4.7",
     "crypto-js": "^4.2.0",
     "ioredis": "^5.6.0",
     "jspdf": "^3.0.1",
@@ -46,6 +47,7 @@
     "reflect-metadata": "^0.2.2",
     "response-time": "^2.3.3",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -58,10 +60,13 @@
     "@swc/core": "^1.10.7",
     "@types/archiver": "^6.0.3",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
