--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/schedule": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "archiver": "^7.0.1",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.1",
