--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport-local": "^1.0.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "resend": "^4.5.1",
     "response-time": "^2.3.3",
     "rxjs": "^7.8.1",
     "sharp": "^0.34.1",
