--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "nodemailer": "^6.10.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pino": "^9.7.0",
+    "pino-http-send": "^0.4.2",
+    "pino-pretty": "^13.0.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "resend": "^4.5.1",
