--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
