--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^5.0.1",
+    "@nestjs/swagger": "^11.2.1",
     "@prisma/client": "^6.5.0",
     "archiver": "^7.0.1",
     "axios": "^1.9.0",
